tests/cases/errors/cpp_emit_unsupported_unary_op/main.sv
module Top;
  int a;
  int c;
  initial begin
    c = &a;
  end
endmodule
